--- a/style.css
+++ b/style.css
@@ -129,3 +129,57 @@ footer{
     color: #fff;
     padding: 20px;
 }
+
+.servicescontainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    text-align: left;
+    height: 59vh;
+    margin: 20px;
+    width: 100%;
+}
+#firstservices{
+    width:60%
+    margin: 15px;
+}
+
+#webbox{
+    width:100%;
+}
+.web{
+    background-color: #E6E6E6;
+    border: 1px solid #c0bfbf;
+    margin: 3px;
+    padding: 20px;
+    line-height: 1;
+}
+.quote{
+    width:35%;
+    margin:5px;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    align-items: left;
+}
+#formservices{
+    background-color: #35424a;
+    padding: 20px;
+    color: #fff;
+}
+
+#formservices button{
+    font-size: 14px;
+    padding: 5px;
+    background-color: #F16529;
+    border: 2px solid #F16529;
+    color:#fff;
+}
+#formservices input, textarea{
+    width:100%;
+    font-size: 12px;
+    padding:10px;
+    margin-top: 5px;
+    color: #35424a;
+}
