--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ text-decoration: none;
     padding: 20px;
     height: 100px;
     background-color: #35424a;
-    align-items: center; 
 }
 #email input{
     font-size: 14px;
@@ -82,7 +81,7 @@ text-decoration: none;
 }
 
 main{
-    max-height: %;
+    max-height: 55%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -154,12 +153,12 @@ footer{
 }
 #firstservices{
     width:60%
-    margin: 15px;
 }
 
 #webbox{
     width:100%;
 }
+
 .web{
     background-color: #E6E6E6;
     border: 1px solid #c0bfbf;
@@ -194,4 +193,90 @@ footer{
     padding:10px;
     margin-top: 5px;
     color: #35424a;
+}
+
+@media screen and (max-width: 760px){
+    .container{
+        display: block;
+        line-height: 2;
+        align-items: center;
+    }
+    .container li{
+    list-style-type: none;
+    float: left;
+    padding-right: 30px;
+    font-weight: bold;
+}
+    .baslik2{
+        margin: 1rem;
+    }
+        .subscribe{
+            display: flex;
+            flex-direction:column;
+            align-items: center;
+            justify-content:space-between;
+            margin: 10px 15px;
+            padding: 20px;
+            height: 100px;
+            background-color: #35424a;
+            line-height: 2;
+        }
+        
+        main{
+            max-height: 55%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+        
+        .logo{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+            margin: 15px;
+        }
+        .logo img{
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            color: #ffffff;
+            max-height: 125px;
+            text-align: center;
+            line-height: 1.5;
+            padding: 0px 6px;
+        }
+        
+        .aboutcontainer{
+            display: flex;
+            flex-direction: column;
+            text-align: left;
+            padding: 20px;
+            height: 60vh;
+        }
+
+        footer{
+            display:block;
+        }
+        .servicescontainer{
+            display: flex;
+            flex-direction:column;
+            flex-flow:column;
+            align-items: center;
+            text-align: left;
+            height: 60vh;
+            margin: 20px;
+            width: 100%;
+        }
+        
+        .quote{
+            width:35%;
+            margin:5px;
+            display:flex;
+            flex-direction:column;
+            align-items: center;
+        }
+        
 }
